<resources>
    <string name="app_name">MoneyKeeper3</string>
    <string name="transaction_fragment_label">New Transaction</string>
    <string name="money">$ %1$.2f</string>
    <string name="delete_button">Delete</string>
    <string name="save_button">Save</string>
    <string name="hint_transaction_amount">money amount</string>
    <string name="hint_note">additional note</string>
    <string name="content_description_rv_item">Category Icon</string>
    <string name="transaction_hint_category">category</string>
    <string name="transaction_choose_category_button">Choose category</string>
    <string name="home_floating_button_description">New transaction button</string>
    <string name="day_filter">Day</string>
    <string name="week_filter">Week</string>
    <string name="year_filter">Year</string>
    <string name="month_filter">Month</string>
    <string name="export_menu">Export</string>
</resources>